# entity-bias-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bias_workbench/: README.md  run.sh
bias_workbench/app/: __init__.py  assist.py  clients.py  experiment.py  generation.py  jobs.py  main.py  presets.py  store.py  tokens.py
bias_workbench/data/: general_keywords.csv
bias_workbench/data/entity_presets/: companies.csv  countries.csv  forenames.csv  manifest.json  politicians.csv
bias_workbench/scripts/: build_entity_presets.py
bias_workbench/static/: app.js  index.html  styles.css
configs/: analysis.json
configs/entities/: companies.json  countries.json  politicians.json  validation_finentity.json  validation_liar.json  validation_madtsc-parties.json  validation_madtsc.json  validation_pstance.json
configs/schema/: analysis.schema.json  entity-set.schema.json  task.schema.json
configs/tasks/validation/: finentity.json  liar.json  madtsc-parties.json  madtsc.json  pstance.json
data/generalization/companies/: entities.csv  product.csv  risk.csv  (+3 more)
processing/: common.py  f1_processing.py  score_processing.py  vectors_processing.py
slurm/: run_generalization.sh  run_generation.sh  run_job.sh  run_validation.sh
src/: python_count.py  run_generalization.py  run_validation.py  utils.py  utils_companies.py  utils_countries.py  utils_politicians.py  utils_validation.py
src/bias_audit/: __init__.py  analysis.py  cli.py  config.py  data.py  generation.py  inference.py  plotting.py  prompts.py  server.py
tests/: test_framework.py
(+48 files in other folders)
