[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "entity-bias-audit"
version = "0.1.0"
description = "A scalable, configuration-driven framework for entity-based LLM bias audits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.28",
  "scikit-learn>=1.2",
  "tqdm>=4.65"
]

[project.scripts]
bias-audit = "bias_audit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4"]
inference = ["vllm"]
analysis = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
